# QuickProtocol_Vala

./: LICENSE  README.md  main.vala  meson.build
subprojects/quickprotocol-core/: AbstractQpSerializer.vala  Base.vala  IQpCommandRequest.vala  IQpSerializer.vala  MyLib.vala  QpCommandInfo.vala  QpConsts.vala  QpInstruction.vala  QpNoticeInfo.vala  QpPackageType.vala  meson.build
subprojects/quickprotocol-core/Commands/Authenticate/: Request.vala  Response.vala
subprojects/quickprotocol-core/Commands/Connect/: Request.vala  Response.vala
subprojects/quickprotocol-tcp/: MyLib.vala  meson.build
